--- a/TerribleQuiz/Components/Pages/Home.razor.css
+++ b/TerribleQuiz/Components/Pages/Home.razor.css
@@ -2,6 +2,15 @@
     width: 100%;
 }
 
+@keyframes rotate {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
 .terrible-button {
     width: 200px;
     height: 60px;
@@ -9,6 +18,10 @@
     border: 2px solid #73AD21;
     background-image: linear-gradient(30deg, rgb(5, 39, 103) 0%, rgb(229,25,229) 50%);
     color: cyan;
+    animation-name: rotate;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
 }
 
 .terrible-table {
@@ -22,7 +35,9 @@
 
 .terrible-floater {
     position: relative;
-    transition: position 1s;
+    display: flex;
+    justify-content: center;
+    transition: left 1s, top 1s;
 }
 
 h1 {
