--- a/TerribleQuiz/Components/Pages/Home.razor.css
+++ b/TerribleQuiz/Components/Pages/Home.razor.css
@@ -2,33 +2,32 @@
     width: 100%;
 }
 
-@keyframes rotate {
+@keyframes stretch {
     from {
-        transform: rotate(0deg);
+        width: 150px;
+        height: 80px;
     }
     to {
-        transform: rotate(360deg);
+        width: 200px;
+        height: 60px;
     }
 }
 
 .terrible-button {
-    width: 200px;
-    height: 60px;
     border-radius: 5px;
     border: 2px solid #73AD21;
     background-image: linear-gradient(30deg, rgb(5, 39, 103) 0%, rgb(229,25,229) 50%);
     color: cyan;
-    animation-name: rotate;
-    animation-duration: 5s;
+    animation-name: stretch;
+    animation-duration: 1s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
+    animation-direction: alternate;
 }
 
 .terrible-table {
     width: 600px;
     height: 200px;
-    border-radius: 5px;
-    border: 2px solid cyan;
     text-align: center;
     vertical-align: central;
 }
